Add first pass at vectorized intrinsic for StringLatin1.hashCode
Next is to generalize it for Arrays.hashCode and StringUTF16.hashCode and make it cheap on shorter strings